<resources>
    <string name="app_name">SYSI</string>
    <string name="profile_title">Profile</string>
    <string name="search_title">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="map_title">Map</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="login_title">Connexion</string>
    <string name="login_btn">Login</string>
    <string name="password">Password</string>
    <string name="register">S\'inscrire</string>
    <string name="login">Se connecter</string>
    <string name="pseudo">Pseudo</string>
    <string name="register_title">Inscription</string>
    <string name="email">Email</string>
    <string name="password2">Retype password</string>
    <string name="already">Déjà inscrit? Cliquez ici</string>
    <string name="createaccount">Vous êtes nouveau? Créer un compte</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="ic_admin">Administration</string>
    <string name="ic_notif">Notification</string>
    <string name="moderation">Moderation</string>
    <string name="gestion_proposition">Gestion proposition</string>
    <string name="gestion_signalement">Gestion signalement</string>
    <string name="gestion_des_moderateurs">Gestion des moderateurs</string>
    <string name="yes">OUI</string>
    <string name="no">NON</string>
    <string name="cancel">annuler</string>
    <string name="confirm">confirmer</string>
    <string name="delete">supprimer</string>
    <string name="reason">Indiquez ici la raison de votre acte</string>
</resources>
