<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gmap"
            android:icon="@drawable/ic_map"
            android:title="@string/map_title" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search_title" />

        <item
            android:id="@+id/nav_notif"
            android:icon="@drawable/ic_notif"
            android:title="@string/ic_notif" />

        <item
            android:id="@+id/nav_moderation"
            android:icon="@drawable/ic_admin"
            android:title="@string/moderation" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />

    </group>

</menu>