<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="default title"
        android:textSize="35dp"
        />

    <TextView
        android:id="@+id/descInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="default description"
        android:textSize="20dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/yesButtonInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            />
        <Button
            android:id="@+id/neutralButtonInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            />
        <Button
            android:id="@+id/noButtoninfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            />
    </LinearLayout>


</LinearLayout>